# Phosphorus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  ENHANCED_REFACTOR_REPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  demo_hydro_integration.py  install_plugin.sh  main.py  pylint.toml  pyproject.toml  run_dev.py  test_plugin.sh
.github/workflows/: code-quality.yml  comprehensive-ci.yml  quick-lint.yml  release.yml
FrontendHydroPlugin/: .env.example  README.md  config.ts  index.ts  package.json  tsconfig.json
FrontendHydroPlugin/locales/: en.json  zh.json
FrontendHydroPlugin/templates/: contest_plagiarism.html
docs/: DEVELOPER_GUIDE.md  HYDRO_INTEGRATION.md  JPLAG_README.md
examples/: jplag_example.py
src/: main.py
src/api/: __init__.py  enhanced_jplag.py  enhanced_jplag_routes.py  health.py  hydro.py  hydro_models.py  jplag.py  jplag_models.py  models.py
src/common/: __init__.py  config.py  constants.py  database.py  logger.py
src/core/: __init__.py  app.py
src/services/: __init__.py  enhanced_jplag_service.py  hydro_service.py  jplag_service.py
src/utils/: __init__.py  command.py
tests/: constants.py  test_health.py  test_hydro_api.py  test_hydro_models.py  test_hydro_service.py  test_jplag_api.py  test_jplag_integration.py  test_jplag_service.py  test_utils.py
